--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Halom Vered",
   "license": "MIT",
   "scripts": {
-    "build": "webpack-cli",
+    "build:prod": "webpack-cli --mode production --env production",
     "start": "webpack-dev-server --mode development --open"
   },
   "devDependencies": {
