--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^0.28.11",
     "moment": "^2.22.0",
     "node-sass": "^4.8.3",
+    "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dates": "^16.5.0",
     "react-dom": "^16.2.0",
