--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -33,7 +34,6 @@
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "uuid": "^3.2.1",
-    "webpack-dev-server": "^3.1.1"
+    "uuid": "^3.2.1"
   }
 }
